scss/_productlist.scss
@use "mixin" as *;
@use "variables" as *;
#product-list header .nav-mobile {
    @include pad {
        display: none;
    }
}
.breadcrumb, .women-shoes {
    padding: 16px clamp(24px, 10.4%, 200px);
    @include pad {
        padding: 16px 12px;
    }
}
.breadcrumb-content li {
    display: inline;
    font-size: 16px;
    color: #212529;
}
.breadcrumb-content li+li:before {
    padding: 12px;
    color: #6C757D;
    content: "/\00a0";
}
.breadcrumb-content li a {
    color: #6C757D;
    text-decoration: none;
}
.breadcrumb-content li a:hover {
    text-decoration: underline;
}
.women-shoes-wrapper {
    display: flex;
    align-items: flex-start;
    gap: 24px;
}
.women-shoes h1 {
    font-size: 28px;
    font-weight: bold;
    margin-bottom: 24px;
}
.women-shoes-menu {
    width: 196px;
    @include pad {
        display: none;
    }
}
.women-shoes-menu ul {
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.women-shoes-menu a {
    font-size: 16px;
    color: #212529;
    text-decoration: none;
    display: flex;
    padding-top: 12px;
    padding-bottom: 12px;
}
.women-shoes-menu a.active, .women-shoes-menu a:hover {
    color: #57A203;
}
.women-shoes-content {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 48px;
}
.women-shoes-list {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 48px 24px;
    width: 100%;
    @include pad {
        grid-template-columns: 1fr 1fr;
        gap: 24px 12px;
    }
}
.women-shoes-item {
    display: flex;
    flex-direction: column;
    gap: 12px;
}
.women-shoes-item a {
    text-decoration: none;
}
.women-shoes-item a:hover {
    text-decoration: underline;
    text-decoration-color: #212529;
}
.women-shoes-item img {
    max-height: 636px;
    max-width: 636px;
    width: 100%;
    margin-bottom: 12px;
}
.women-shoes-item h4 {
    font-size: 16px;
}
.display-mobile {
    display: none;
    @include pad {
        display: flex;
    }
}
.pagination {
    display: flex;
    justify-content: center;
    gap: 12px;
}
.pagination-item {
    display: flex;
    gap: 8px;
}
.pagination-item a, .pagination-item div {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    color: #212529;
    width: 40px;
    height: 40px;
}
.pagination-item a.active {
    background-color: #C0FA73;
    &:hover {
        background-color: #C0FA73;
    }
}
.pagination-item a:hover {
    background-color: #F8F9FA;
}
.pagination .left-arrow, .pagination .right-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
}
.left-arrow.active img, .right-arrow.active img {
    opacity: 0.4;
    cursor: not-allowed;
}
.right-arrow:hover {
    background-color: #F8F9FA;
}

